# NcursesConnectN

./: CMakeLists.txt  board.c  board.h  curse.c  curse.h  main.c  move.c  move.h  win.c  win.h
